[tool.poetry]

name = "cdiscount_import"
version = "0.0"
description = "Interface for the PlentyMarkets API."

license = "GPLv3"

authors = ["Jan Sallermann <jan.sallermann@panasiam.de>"]
readme = "README.md"

classifiers = [
    "Development Status :: 1 - Planning",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7"
]

[tool.poetry.dependencies]

python = "^3.7"
pandas = "^1.1.2"
openpyxl = "^3.0.7"
plenty-api = "^0.2.8"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]

# Linters
mypy = "*"
pydocstyle = "*"
pylint = "~2.6.0"

# Testing
pytest = "^5.3.2"
pytest-cov = "*"
pytest-describe = { git = "https://github.com/pytest-dev/pytest-describe", rev = "453aa9045b265e313f356f1492d8991c02a6aea6" } # use 2.0 when released
pytest-expecter = "^2.1"
pytest-random = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
